Fix trending product spacing

--- a/html-exercise-3/stylesheet/css/style.css
+++ b/html-exercise-3/stylesheet/css/style.css
@@ -269,7 +269,7 @@ img {
   padding: 13px 25px;
 }
 .aside .filter-list .filter-item {
-  padding: 20px 25px;
+  padding: 18px 25px;
   background-color: #fafafa;
   position: relative;
 }
@@ -464,7 +464,7 @@ img {
   padding-bottom: 30px;
 }
 .home-page .section .trending-products-item {
-  margin-bottom: 40px;
+  margin-bottom: 20px;
 }
 .home-page .section-product-gallery {
   padding-bottom: 70px;
