--- a/html-exercise-3/stylesheet/scss/layout/_aside.scss
+++ b/html-exercise-3/stylesheet/scss/layout/_aside.scss
@@ -11,7 +11,7 @@
 
   .filter-list {
     .filter-item {
-      padding: 20px 25px;
+      padding: 18px 25px;
       background-color: #fafafa;
       position: relative;
 
