--- a/html-exercise-3/stylesheet/scss/pages/_home.scss
+++ b/html-exercise-3/stylesheet/scss/pages/_home.scss
@@ -99,7 +99,7 @@
     }
 
     .trending-products-item {
-      margin-bottom: 40px;
+      margin-bottom: 20px;
     }
   }
 
